--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/mpx-ecology/mpx-tsc/issues"
   },
-  "homepage": "https://github.com/mpx-ecology/mpx-tsc#readme"
+  "homepage": "https://github.com/mpx-ecology/mpx-tsc#readme",
+  "dependencies": {
+    "@volar/typescript": "^2.0.4",
+    "@vue/language-core": "^1.8.27"
+  }
 }
