--- a/package.json
+++ b/package.json
@@ -1,33 +1,46 @@
 {
-  "name": "@mpxjs/mpx-tsc",
-  "version": "0.0.1",
-  "description": "命令行中对Mpx文件与ts文件进行类型检查",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mpx-ecology/mpx-tsc.git"
-  },
-  "bin": {
-    "mpx-tsc": "bin/mpx-tsc.js"
-  },
-  "keywords": [
-    "typescript",
-    "@mpxjs",
-    "miniprogram",
-    "type-check"
-  ],
-  "author": "Blackgan3",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mpx-ecology/mpx-tsc/issues"
-  },
-  "homepage": "https://github.com/mpx-ecology/mpx-tsc#readme",
-  "dependencies": {
-    "@volar/typescript": "~1.11.1",
-    "@vue/language-core": "^1.8.27",
-    "semver": "^7.6.0"
-  }
+	"name": "@mpxjs/mpx-tsc",
+	"version": "1.0.0",
+	"description": "命令行中对Mpx文件与ts文件进行类型检查",
+	"scripts": {
+		"build": "tsc",
+		"watch": "tsc -w",
+		"test": "vitest run"
+	},
+	"files": [
+		"bin",
+		"**/*.js",
+		"**/*.d.ts"
+	],
+	"keywords": [
+		"@mpxjs",
+		"miniprogram",
+		"typescript",
+		"tsc"
+	],
+	"license": "ISC",
+	"author": "Blackgan3,wangshunnn",
+	"homepage": "https://github.com/mpx-ecology/mpx-tsc#readme",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/mpx-ecology/mpx-tsc.git"
+	},
+	"bugs": {
+		"url": "https://github.com/mpx-ecology/mpx-tsc/issues"
+	},
+	"bin": {
+		"mpx-tsc": "bin/mpx-tsc.js"
+	},
+	"dependencies": {
+		"@volar/typescript": "~2.1.2",
+		"@vue/language-core": "2.0.6",
+		"semver": "^7.5.4"
+	},
+	"peerDependencies": {
+		"typescript": "*"
+	},
+	"devDependencies": {
+		"@types/node": "latest",
+		"vitest": "latest"
+	}
 }
