--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 out
+lib
 dist
 node_modules
 .idea
@@ -8,8 +9,8 @@ node_modules
 extensions/*/meta.json
 extensions/*/stats.html
 
-*.d.ts
-*.js
-*.map
+*/*.d.ts
+*/*.js
+*/*.map
 # ! 测试用例待完善
 test-*
