--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,8 +18,11 @@
 	},
 	"vue.server.path": "./extensions/vscode/server.js",
 	"files.exclude": {
-		"*.d.ts": true,
-		"*.js": true,
-		"*.map": true,
+		// "*.d.ts": true,
+		// "*.js": true,
+		// "*.map": true,
+		// "lib/**/*.d.ts": true,
+		// "lib/**/*.js": true,
+		"lib/**/*.map": true
 	}
 }
