--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@mpxjs/mpx-tsc",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "命令行中对Mpx文件与ts文件进行类型检查",
 	"main": "lib/index.js",
 	"scripts": {
@@ -41,6 +41,8 @@
 		"@volar/typescript": "~2.1.2",
 		"@vue/compiler-dom": "^3.4.21",
 		"@vue/language-core": "2.0.6",
+		"computeds": "^0.0.1",
+		"minimatch": "^9.0.3",
 		"path-browserify": "^1.0.1",
 		"semver": "^7.5.4"
 	},
@@ -48,6 +50,7 @@
 		"typescript": "*"
 	},
 	"devDependencies": {
+		"@types/minimatch": "^5.1.2",
 		"@types/node": "latest",
 		"@types/path-browserify": "^1.0.2",
 		"vitest": "latest"
