--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"test": "vitest run",
 		"clean": "npm run clean:node_modules && npm run clean:tsbuildinfo",
 		"clean:node_modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
-		"clean:tsbuildinfo": "find . -name '*.tsbuildinfo' -type f -prune -exec rm -rf '{}' +"
+		"clean:tsbuildinfo": "find . -name '*.tsbuildinfo' -type f -prune -exec rm -rf '{}' +",
+		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+		"version": "npm run changelog && git add CHANGELOG.md"
 	},
 	"files": [
 		"bin",
@@ -24,7 +26,7 @@
 		"tsc"
 	],
 	"license": "ISC",
-	"author": "Blackgan3,wangshunnn",
+	"author": "wangshunnn, Blackgan3",
 	"homepage": "https://github.com/mpx-ecology/mpx-tsc#readme",
 	"repository": {
 		"type": "git",
@@ -53,6 +55,7 @@
 		"@types/minimatch": "^5.1.2",
 		"@types/node": "latest",
 		"@types/path-browserify": "^1.0.2",
+		"conventional-changelog-cli": "^4.1.0",
 		"vitest": "latest"
 	}
 }
