--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "命令行中对Mpx文件与ts文件进行类型检查",
 	"main": "lib/index.js",
 	"scripts": {
-		"setup": "npm run clean && pnpm i && npm run build",
+		"resetup": "npm run clean && pnpm i && npm run build",
 		"build": "tsc -b",
 		"watch": "tsc -b -w",
 		"test": "vitest run",
@@ -20,7 +20,7 @@
 		"**/*.d.ts"
 	],
 	"keywords": [
-		"@mpxjs",
+		"mpx",
 		"miniprogram",
 		"typescript",
 		"tsc"
@@ -39,8 +39,8 @@
 		"mpx-tsc": "bin/mpx-tsc.js"
 	},
 	"dependencies": {
-		"@volar/language-core": "2.2.0-alpha.5",
-		"@volar/typescript": "2.2.0-alpha.5",
+		"@volar/language-core": "2.2.0-alpha.6",
+		"@volar/typescript": "2.2.0-alpha.6",
 		"@vue/compiler-dom": "^3.4.21",
 		"@vue/language-core": "2.0.10",
 		"computeds": "^0.0.1",
